--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,7 @@ body {
   margin:0;
 }
 
-.nmi *{
+.nmi * {
   margin:0;
 }
 
@@ -44,6 +44,7 @@ body {
 }
 
 .bp-btn {
-  width:55px;
+  padding-left:5px;
+  padding-right:5px;
   height:30px;
 } 
